fix: remove gaps between characters in nfo preview
Probably the best that can be done without requiring a dedicated CP437 DOS font.

fixes #5130

--- a/resources/sass/pages/_torrent.scss
+++ b/resources/sass/pages/_torrent.scss
@@ -98,7 +98,14 @@
 ---------------------------------------------------------------------------- */
 
 .torrent__nfo {
-    line-height: 1;
+    line-height: 1 !important;
+    letter-spacing: -1px;
+    white-space: pre;
+}
+
+.torrent__nfo-pre {
+    width: max-content;
+    line-height: 1 !important;
 }
 
 /* Peer counts
